--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,13 @@ server:
   port: 9999
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/ems_db
-    username: root
-    password: password
+    url: jdbc:mysql://database-2.crecu4e0059n.us-east-2.rds.amazonaws.com:3306/ems_db
+    username: admin
+    password: A1997kash
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       minimum-idle: 5
       maximum-pool-size: 10
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -31,3 +30,10 @@ logging:
     org.springframework.security: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql: TRACE
+
+
+file:
+  upload:
+    windows: C:/ems/uploads/
+    linux: /opt/ems/uploads/
+
