--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,15 @@ spring:
     hikari:
       minimum-idle: 5
       maximum-pool-size: 100
+
+#    url: jdbc:mysql://127.0.0.1:3306/ems_db
+#    username: root
+#    password: password
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    hikari:
+#      minimum-idle: 5
+#      maximum-pool-size: 10
+
   jpa:
     hibernate:
       ddl-auto: update
