--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: infopartycrafters25@gmail.com
-    password: "---"
+    password: "nuyw bshy mlyh tjez"
     properties:
       mail:
         smtp:
@@ -75,3 +75,6 @@ file:
 inventory:
   low-stock-threshold: 32
 
+image:
+  upload:
+    directory: C:/ems/gallery/
