--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,12 @@ spring:
       minimum-idle: 5
       maximum-pool-size: 100
 
+
+  jpa:
+      hibernate:
+      ddl-auto: create
+      show-sql: true
+
 #    url: jdbc:mysql://127.0.0.1:3306/ems_db
 #    username: root
 #    password: password
